--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="prebuilt/framework_4.0.4_r1.2.jar"/>
+	<classpathentry kind="lib" path="prebuilt/core_4.0.4_r1.2.jar"/>
+	<classpathentry kind="lib" path="prebuilt/android-common_4.0.4_r1.2.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
