--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,6 +21,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.funkyandroid.launcher">
 
+    <!-- This is an API level 15 compatible launcher -->
+    <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="15" android:maxSdkVersion="15"/>
+    
     <original-package android:name="com.android.launcher2" />
 
     <permission
