--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -56,6 +56,7 @@
     <uses-permission android:name="android.permission.SET_WALLPAPER_HINTS" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.BIND_APPWIDGET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="com.funkyandroid.launcher.permission.READ_SETTINGS" />
     <uses-permission android:name="com.funkyandroid.launcher.permission.WRITE_SETTINGS" />
 
@@ -130,5 +131,14 @@
             android:authorities="com.funkyandroid.launcher2.settings"
             android:writePermission="com.funkyandroid.launcher.permission.WRITE_SETTINGS"
             android:readPermission="com.funkyandroid.launcher.permission.READ_SETTINGS" />
+        
+        <!-- Rules engine services -->
+        <receiver
+            android:name="com.funkyandroid.launcher2.rulesengine.NotificationReceiver">
+            <intent-filter>
+                <action android:name="android.net.wifi.supplicant.CONNECTION_CHANGE" />
+            </intent-filter>
+        </receiver>
+        <service android:name="com.funkyandroid.launcher2.rulesengine.WifiChangeHandlerService" />
     </application>
 </manifest>
